--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "line-pad",
+    "name": "grid-pattern-manager",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
